<?php
declare(strict_types=1);

namespace App\GangOfFourDesignPatterns\GeneratePatterns\src\Products\Contracts;

/**
 * Интерфейс для описания предмета одежды.
 *
 * Этот интерфейс определяет основные методы, которые должны реализовывать
 * все предметы одежды. Он служит контрактом для любых конкретных реализаций
 * одежды, обеспечивая единообразие в доступных методах.
 */
interface ClothingItem {
    /**
     * Возвращает описание предмета одежды.
     *
     * Этот метод должен возвращать текстовое описание, которое
     * может включать такие детали, как цвет, материал, стиль и другие
     * характеристики предмета одежды.
     *
     * @return string Описание предмета одежды.
     */
    public function getDescription(): string;

    /**
     * Возвращает цену предмета одежды.
     *
     * Этот метод должен возвращать числовое значение, представляющее
     * цену предмета одежды. Цена должна быть указана в рублях или
     * другой валюте, в зависимости от контекста.
     *
     * @return float Цена предмета одежды.
     */
    public function getPrice(): float;
}
