<?php
declare(strict_types=1);

namespace App\GangOfFourDesignPatterns\GeneratePatterns\src\Products\Contracts;

/**
 * Интерфейс для сложного предмета одежды.
 *
 * Этот интерфейс расширяет базовый интерфейс ClothingItem,
 * добавляя функциональность для предметов одежды, которые состоят
 * из нескольких компонентов, таких как костюмы или платья с дополнительными
 * элементами.
 */
interface ComplexClothingItem extends ClothingItem {
    /**
     * Возвращает массив компонентов сложного предмета одежды.
     *
     * Этот метод должен возвращать список всех составляющих частей
     * предмета одежды, позволяя получить информацию о компонентах,
     * из которых он состоит. Например, для костюма это могут быть
     * куртка, брюки и жилет.
     *
     * @return array Массив компонентов сложного предмета одежды.
     */
    public function getComponents(): array;
}
